--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 	<meta name="format-detection" content="telephone=no">
 	<!-- swiper -->
 	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -61,9 +60,9 @@
 
 					</div>
 				</div>
-				<div class="main-block__bg _ibg">
+				<!-- <div class="main-block__bg _ibg">
 					<picture><source srcset="img/bg.webp" type="image/webp"><img src="img/bg.jpg" alt=""></picture>
-				</div>
+				</div> -->
 				<div class="main-block__info-img _ibg">
 					<picture><source srcset="img/main-block/112.webp" type="image/webp"><img src="img/main-block/112.png" alt=""></picture>
 				</div>
@@ -311,12 +310,12 @@
 	<script src=" https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<!-- Swiper -->
 <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
-<script src="js/main.min.js"></script>
-	<script>
-		lightGallery(document.getElementById('gallery'), {
-			thumbnail: true
-		});
-	</script>
+<script src="js/main.js"></script>
+<script>
+	lightGallery(document.getElementById('gallery'), {
+		thumbnail: true
+	});
+</script>
 
 </body>
 
