--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							Пятидверный Porsche Panamera - это купе класса люкс, начало выпуска и продажи его
 							датируется 2009 годом. Имя Panamera было дано ему в честь удачного выступления Porsche в
 							ралли Carrera Panamericana, проходившем в середине прошлого столетия. Данный
-							четырехместный автомобиль имеет переднемоторную компановку, задний или полный привод.
+							четырехместный автомобиль имеет переднемоторную компановку, задний или полный привод!
 						</div>
 						<div class="about__text">
 							Комплектация заднеприводной модели Porsche Panamera S включает механическую коробку
