--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
 			</div>
 			<nav class="header__menu">
 				<ul class="header__list">
-					<li class="header__item"><a href="#main-block" class="header__link _goto-block">Главная</a></li>
-					<li class="header__item"><a href="#about" class="header__link _goto-block">Обзор</a></li>
-					<li class="header__item"><a href="#specifications"
-							class="header__link _goto-block">Характеристики</a>
+					<li class="header__item"><a href="#main-block" class="header__link">Главная</a></li>
+					<li class="header__item"><a href="#about" class="header__link">Обзор</a></li>
+					<li class="header__item"><a href="#specifications" class="header__link">Характеристики</a>
 					</li>
-					<li class="header__item"><a href="#gallery" class="header__link _goto-block">Галерея</a></li>
-					<li class="header__item"><a href="#numbers" class="header__link _goto-block">Тест-драйв</a></li>
+					<li class="header__item"><a href="#gallery" class="header__link">Галерея</a></li>
+					<li class="header__item"><a href="#numbers" class="header__link">Тест-драйв</a></li>
 				</ul>
 			</nav>
 			<div class="header__tel"><a href="tel:+7(976) 180-61-89"><span>Быстрый звонок:</span> +7(976) 180-61-89</a>
@@ -42,14 +41,14 @@
 	</div>
 </header>
 			<!-- Основной контент -->
-			<div class="main-block _scr-item">
+			<div class="main-block _scr-item" id="main-block">
 				<div class="_container">
 					<div class="main-block__content">
 						<div class="main-block__info">
 							<div class="main-block__title">Прикоснись к cовершенству</div>
 							<div class="main-block__text">POWER
 								FULL</div>
-							<a class="main-block__btn _goto" href="#specifications">Посмотреть</a>
+							<a class="main-block__btn" href="#specifications">Посмотреть</a>
 						</div>
 						<div class="main-block__info-performance info-performance _scr-item">
 							<div class="info-performance__title">Porsche Panamera</div>
@@ -64,16 +63,17 @@
 					<picture><source srcset="img/bg.webp" type="image/webp"><img src="img/bg.jpg" alt=""></picture>
 				</div> -->
 				<div class="main-block__info-img _ibg">
-					<picture><source srcset="img/main-block/112.webp" type="image/webp"><img src="img/main-block/112.png" alt=""></picture>
+					<picture><source srcset="img/main-block/112.webp" type="image/webp"><img src="img/main-block/113.jpg" alt=""></picture>
 				</div>
 
 				<div class="info-performance__img">
-					<picture><source srcset="img/main-block/222.webp" type="image/webp"><img src="img/main-block/222.png" alt=""></picture>
+					<picture><source srcset="img/main-block/222.webp" type="image/webp"><img src="img/main-block/223.png" alt=""></picture>
 				</div>
 			</div>
-			<div class="about _scr-item">
+			<div class="about _scr-item" id="about">
+				<div class="about__main-title">Обзор</div>
 				<div class="about__content">
-					<div class="about__img _ibg"><picture><source srcset="img/about/1.webp" type="image/webp"><img src="img/about/1.png" alt=""></picture></div>
+					<div class="about__img _ibg"><picture><source srcset="img/about/1.webp" type="image/webp"><img src="img/about/2.jpg" alt=""></picture></div>
 					<div class="about__info">
 						<div class="about__title">Краткий обзор автомобиля Porsche Panamera</div>
 						<div class="about__text">
@@ -81,14 +81,6 @@
 							датируется 2009 годом. Имя Panamera было дано ему в честь удачного выступления Porsche в
 							ралли Carrera Panamericana, проходившем в середине прошлого столетия. Данный
 							четырехместный автомобиль имеет переднемоторную компановку, задний или полный привод!
-						</div>
-						<div class="about__text">
-							Комплектация заднеприводной модели Porsche Panamera S включает механическую коробку
-							передач, а вот достоинством полноприводных модификаций является 7-ступенчатая коробка
-							автомат с двойным сцеплением и система Start/Stop. С уверенностью можно сказать, что на
-							автомобилях с двумя педалями такая система используется впервые. Ее достоинством
-							является то, что она позволяет заметно экономить топливо от 0,6 до 1,5 литров на 100км в
-							зависимости от цикла движения.
 						</div>
 						<a class="about__btn _popup-link" href="#more">
 							Читать больше
@@ -98,7 +90,7 @@
 			</div>
 
 
-			<div class="specifications">
+			<div class="specifications" id="specifications">
 				<div class="_container">
 					<div class="specifications__content">
 						<div class="specifications__info">
@@ -186,23 +178,23 @@
 					</div>
 				</div>
 			</div>
-			<div class="gallery">
+			<div class="gallery" id="gallery">
 				<div class="container">
 					<div class="gallery__content">
-						<div class="gallery__body" id="gallery">
-							<a href="img/gallery/1.jpg" class="gallery__item-img  _ibg "><picture><source srcset="img/gallery/1.webp" type="image/webp"><img src="img/gallery/1.webp"></picture>
+						<div class="gallery__body">
+							<a href="img/gallery/1_1.jpg" class="gallery__item-img  _ibg "><img src="img/gallery/1_1.jpg">
 							</a>
-							<a href="img/gallery/22.jpg" class="gallery__item-img _ibg"><picture><source srcset="img/gallery/22.webp" type="image/webp"><img src="img/gallery/22.webp"></picture>
+							<a href="img/gallery/22_1.jpg" class="gallery__item-img _ibg"><img src="img/gallery/22_1.jpg">
 							</a>
-							<a href="img/gallery/3.jpg" class="gallery__item-img _ibg"><picture><source srcset="img/gallery/3.webp" type="image/webp"><img src="img/gallery/3.webp"></picture>
+							<a href="img/gallery/3_1.jpg" class="gallery__item-img _ibg"><img src="img/gallery/3_1.jpg">
 							</a>
-							<a href="img/gallery/4.jpg" class="gallery__item-img  _ibg"><picture><source srcset="img/gallery/4.webp" type="image/webp"><img src="img/gallery/4.webp"></picture>
+							<a href="img/gallery/4_1.jpg" class="gallery__item-img  _ibg"><img src="img/gallery/4_1.jpg">
 							</a>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="numbers">
+			<div class="numbers" id="numbers">
 				<div class="_container">
 					<div class="numbers__content">
 						<div class="numbers__body">
@@ -269,24 +261,6 @@
 				система Start/Stop. С уверенностью можно сказать, что на автомобилях с двумя педалями такая система
 				используется впервые. Ее достоинством является то, что она позволяет заметно экономить топливо от 0,6 до
 				1,5 литров на 100км в зависимости от цикла движения.
-				Начинать знакомство с новым интерьером стоит именно отсюда – с одного из «ложементов» второго ряда
-				строго четырехместного салона. За дополнительные деньги можно заказать ложементы с восемью (!)
-				электрорегулировками, но и «базовые» хороши. Пространства над головой действительно вдоволь, а
-				пожаловаться при посадке за водителем ростом чуть за 180 сантиметров можно разве что на некоторую
-				тесноту в ступнях.Зато между креслами примостился бокс с двумя USB-зарядками и весьма причудливой
-				машинерией подстаканников и тачскрин, с которого можно «рулить» мультимедией, но куда веселее
-				развлекаться с климат-контролем. Вот, например, дефлекторы, напрочь лишенные флажков-рычажков для
-				изменения направления потока воздуха. Тыкаем в соответствующее изображение на экране – и под пальцами
-				появляется графическое воплощение источника свежего (или теплого – по сезону) воздуха. Двигаем «точку
-				фокусировки» потока – и пластиковые жалюзи послушно следуют за перемещениями пальца. Восторг, доступный
-				до сих пор только поклонникам «радиоуправляшек»!
-				Позади второго ряда – багажник объемом 495 литров (под полом – сабвуфер и ремкомплект, никаких
-				«запасок»), который можно увеличить до 1 304 – второй ряд разделен на три независимо складывающихся
-				сегмента.
-
-				В общем, инженеры с дизайнерами сделали все возможное, чтобы убедить нас в том, что пассажиров и багаж
-				они любят не меньше, чем человека за рулем.
-
 			</div>
 			<div class="popup__close"></div>
 		</div>
