--- a/index.html
+++ b/index.html
@@ -194,6 +194,14 @@
 					</div>
 				</div>
 			</div>
+			<div class="gallery-full">
+					<div class="gallery-full__content">
+						<div class="gallery-full__body">
+							<img class="gallery-full_img" src="img/gallery/1_1.jpg">
+						</div>
+						<div class="gallery-full__overlay"></div>
+					</div>
+			</div>
 			<div class="numbers" id="numbers">
 				<div class="_container">
 					<div class="numbers__content">
