fix gallery, popup and block about

--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 			<div class="about _scr-item" id="about">
 				<div class="about__main-title">Обзор</div>
 				<div class="about__content">
-					<div class="about__img _ibg"><picture><source srcset="img/about/1.webp" type="image/webp"><img src="img/about/2.jpg" alt=""></picture></div>
-					<div class="about__info">
+						<div class="about__info">
 						<div class="about__title">Краткий обзор автомобиля Porsche Panamera</div>
 						<div class="about__text">
 							Пятидверный Porsche Panamera - это купе класса люкс, начало выпуска и продажи его
@@ -86,6 +85,7 @@
 							Читать больше
 						</a>
 					</div>
+					<div class="about__img _ibg"><picture><source srcset="img/about/1.webp" type="image/webp"><img src="img/about/2.jpg" alt=""></picture></div>
 				</div>
 			</div>
 
@@ -182,26 +182,26 @@
 				<div class="container">
 					<div class="gallery__content">
 						<div class="gallery__body">
-							<a href="img/gallery/1_1.jpg" class="gallery__item-img  _ibg "><img src="img/gallery/1_1.jpg">
-							</a>
-							<a href="img/gallery/22_1.jpg" class="gallery__item-img _ibg"><img src="img/gallery/22_1.jpg">
-							</a>
-							<a href="img/gallery/3_1.jpg" class="gallery__item-img _ibg"><img src="img/gallery/3_1.jpg">
-							</a>
-							<a href="img/gallery/4_1.jpg" class="gallery__item-img  _ibg"><img src="img/gallery/4_1.jpg">
-							</a>
+							<div class="gallery__item-img  _ibg "><img src="img/gallery/1_1.jpg">
+							</div>
+							<div class="gallery__item-img _ibg"><img src="img/gallery/22_1.jpg">
+							</div>
+							<div class="gallery__item-img _ibg"><img src="img/gallery/3_1.jpg">
+							</div>
+							<div class="gallery__item-img  _ibg"><img src="img/gallery/4_1.jpg">
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="gallery-full">
+			<!-- <div class="gallery-full">
 					<div class="gallery-full__content">
 						<div class="gallery-full__body">
 							<img class="gallery-full_img" src="img/gallery/1_1.jpg">
 						</div>
 						<div class="gallery-full__overlay"></div>
 					</div>
-			</div>
+			</div> -->
 			<div class="numbers" id="numbers">
 				<div class="_container">
 					<div class="numbers__content">
